@@ -54,8 +54,8 @@ extern uint8 bg_pattern_cache[0x80000];
 extern uint8 playfield_shift;
 extern uint8 playfield_col_mask;
 extern uint16 playfield_row_mask;
-extern uint16 hc_latch;
 extern uint16 v_counter;
+extern uint32 hvc_latch;
 extern uint32 dma_length;
 extern int32 fifo_write_cnt;
 extern uint32 fifo_lastwrite;
